Fix size of tab list span on IE
issue7318
review36151002

--- a/src/sao.less
+++ b/src/sao.less
@@ -8,6 +8,9 @@
         overflow: hidden;
         text-overflow: ellipsis;
         white-space: nowrap;
+        /* For IE */
+        display: block;
+        margin-right: 15px;
     }
 }
 
